# osa

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  test-streaming.html
.claude/commands/: label-issue.md
.context/: api-structure.md  api_key_authorization_design.md  community_onboarding_implementation_plan.md  community_onboarding_review.md  community_onboarding_sprint.md  deployment-checklist.md  eeglab-developer-guide.md  eeglab-implementation-plan.md  eeglab-user-guide.md  epic-branch-workflow.md  gpt4_non_answer_investigation.md  hed-chat-widget-prompt-architecture.md  implementation_summary.md  local-testing-guide.md  nemar-api.md  phase1-implementation-summary.md  proposed_gpt4_fixes.md  qp-worker-architecture.md  tool-system-guide.md  yaml_registry.md
.github/workflows/: auto-bump-dev.yml  claude-code-review.yml  claude.yml  cleanup-preview-dns.yml  deploy-dashboard.yml  deploy-pages.yml  docker-build.yml  ensure-stable-version.yml  notify-docs.yml  publish-testpypi.yml  publish.yml  release.yml  sync-develop.yml  sync-worker-cors.yml  tag-release.yml  test-admin-token.yml  test.yml  tests.yml
.rules/: testing_guidelines.md
.serena/memories/: codebase_structure.md  suggested_commands.md  system_environment.md
dashboard/: _redirects  index.html
dashboard/osa/: index.html
deploy/: .env.example  DEPLOYMENT_ARCHITECTURE.md  Dockerfile  apache-api.osc.earth.conf  auto-update-dev.sh  auto-update.sh  deploy.sh  docker-compose.yml
docs/: architecture.md  community-onboarding.md  config-reference.md  troubleshooting.md  version-management.md
frontend/: demo.html  index.html  osa-chat-widget.js  test-streaming.js
registries/: communities.yaml
scripts/: bump_version.py  sync_worker_cors.py  test_eeglab_interactive.py  widget-sri.py
src/: __init__.py  version.py
src/agents/: __init__.py  base.py  hed.py
src/api/: config.py  main.py  scheduler.py  security.py
src/assistants/: __init__.py  community.py  registry.py
src/cli/: client.py  config.py  main.py  mirror.py  output.py  sync.py  validate.py
src/core/: logging.py  validation.py
src/interfaces/: __init__.py
src/knowledge/: __init__.py  bep_sync.py  db.py  discourse_sync.py  docstring_sync.py  faq_summarizer.py  github_sync.py  mailman_sync.py  matlab_parser.py  mirror.py  papers_sync.py  python_parser.py  search.py
src/metrics/: __init__.py  alerts.py  budget.py  cost.py  db.py  middleware.py  queries.py
src/tools/: base.py  fetcher.py  hed.py  hed_validation.py  knowledge.py  markdown_cleaner.py
src/utils/: page_fetcher.py
tests/fixtures/: eeg_context_docstring.txt
tests/test_agents/: test_base.py  test_hed.py  test_page_context.py
tests/test_api/: test_authorization.py  test_chat.py  test_communities_endpoint.py  test_community_router.py  test_cors.py  test_cost_protection.py  test_dashboard.py  test_health.py  test_logo.py  test_metrics_endpoints.py  test_metrics_public.py  test_page_context.py  test_scheduler.py  test_scoped_auth.py  test_security.py  test_streaming_metrics.py  test_sync.py  test_widget_test.py
tests/test_assistants/: __init__.py  test_community.py  test_community_yaml_generic.py  test_discovery.py  test_eeglab_config.py  test_eeglab_integration.py  test_hed_knowledge.py  test_registry.py
tests/test_cli/: test_client.py  test_config.py  test_main.py  test_sync.py  test_validate.py
tests/test_core/: test_logging.py  (+2 more)
(+78 files in other folders)
